@@ -122,4 +122,13 @@
         <Variable name="server">localhost</Variable>
         <Variable name="port">7052</Variable>
     </Driver>
+
+    <Driver name="bigsql" 
+            target="BigSQL"
+            class="com.cognos.bigsql.jdbc.BigSQLDriver"
+            analyzer="org.sqsh.analyzers.ANSIAnalyzer"
+            url="jdbc:bigsql://${server}:${port}#if($db)/${db}#end">
+        <Variable name="server">localhost</Variable>
+        <Variable name="port">7052</Variable>
+    </Driver>
 </Drivers>
